alignment issue sorted

--- a/style_resume.css
+++ b/style_resume.css
@@ -376,7 +376,7 @@ button:focus {
     content: "";
     position: absolute;
     top: 50%;
-    left: 110.25%;
+    left: 112%;
     border-radius: 50%;
     width: 0.5rem;
     height: 0.7rem;
@@ -385,17 +385,17 @@ button:focus {
 }
 
 .experience-item:nth-child(2n)::after, .education-item:nth-child(2n)::after{
-    left: -11%;
+    left: -9.25%;
     z-index: 1;
 }
 
 .timeline-divider{
     position: absolute;
-    height: 73%;
+    height: 65%;
     width: 0;
     border: 1px black;
     border-style: dashed;
-    top: 14%;
+    top: 18.20%;
     left: 50%;
 }
 
